--- a/site/content/posts/guppy/guppy-80-co-nen-nuoi-chung-voi-betta/index.mdx
+++ b/site/content/posts/guppy/guppy-80-co-nen-nuoi-chung-voi-betta/index.mdx
@@ -6,7 +6,8 @@ date: 2025-01-05
 thumbnail: image.jpg
 ---
 
-Cá guppy và cá betta đều là những loài cá cảnh được yêu thích trong cộng đồng nuôi cá. Tuy nhiên, việc nuôi chung chúng trong cùng một bể cá thường khiến nhiều người nuôi băn khoăn. Liệu cá guppy và cá betta có thể hòa hợp với nhau hay không? Trong bài viết này, chúng ta sẽ khám phá những khía cạnh liên quan đến việc nuôi guppy và betta chung, bao gồm tính cách, điều kiện sống và một số mẹo để đảm bảo cả hai loài cá có thể sống hòa hợp.
+Cá guppy và cá betta đều là những loài cá cảnh được yêu thích trong cộng đồng nuôi cá. Tuy nhiên, việc nuôi chung chúng trong cùng một bể cá thường khiến nhiều người nuôi băn khoăn. 
+Liệu cá guppy và cá betta có thể hòa hợp với nhau hay không? Trong bài viết này, chúng ta sẽ khám phá những khía cạnh liên quan đến việc nuôi guppy và betta chung, bao gồm tính cách, điều kiện sống và một số mẹo để đảm bảo cả hai loài cá có thể sống hòa hợp.
 
 ### 1. **Đặc Điểm Của Cá Guppy và Cá Betta**
 
